# docs/swagger.json
@@ -15,6 +15,43 @@
     "host": "tudo-api.nspyf.top",
     "paths": {
         "/auth/activity": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "活动系统"
+                ],
+                "summary": "社团账号修改活动",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户令牌",
+                        "name": "Token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "Query",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": " ",
+                        "name": "JSON",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Activity"
+                        }
+                    }
+                ]
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -42,6 +79,34 @@
                         "schema": {
                             "$ref": "#/definitions/dto.Activity"
                         }
+                    }
+                ]
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "活动系统"
+                ],
+                "summary": "社团账号删除活动",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户令牌",
+                        "name": "Token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "Query",
+                        "in": "query",
+                        "required": true
                     }
                 ]
             }
@@ -226,6 +291,7 @@
                     "type": "string"
                 },
                 "start_time": {
+                    "description": "Time：自1970年1月1日00:00:00 UTC以来经过的毫秒数",
                     "type": "string"
                 },
                 "title": {
